--- a/quartus/db/microprocessador.lpc.html
+++ b/quartus/db/microprocessador.lpc.html
@@ -18,13 +18,13 @@
 <TR >
 <TD >datapath0|ALU0</TD>
 <TD >20</TD>
+<TD >1</TD>
 <TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >9</TD>
-<TD >0</TD>
-<TD >0</TD>
-<TD >0</TD>
+<TD >1</TD>
+<TD >10</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -70,6 +70,22 @@
 <TD >0</TD>
 <TD >0</TD>
 <TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >datapath0|regzero</TD>
+<TD >4</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -225,11 +241,11 @@
 </TR>
 <TR >
 <TD >datapath0|progmem0|altsyncram_component|auto_generated</TD>
-<TD >26</TD>
+<TD >18</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >16</TD>
+<TD >8</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -241,14 +257,14 @@
 </TR>
 <TR >
 <TD >datapath0|progmem0</TD>
-<TD >26</TD>
-<TD >17</TD>
+<TD >18</TD>
+<TD >9</TD>
 <TD >0</TD>
-<TD >17</TD>
-<TD >16</TD>
-<TD >17</TD>
-<TD >17</TD>
-<TD >17</TD>
+<TD >9</TD>
+<TD >8</TD>
+<TD >9</TD>
+<TD >9</TD>
+<TD >9</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -273,11 +289,11 @@
 </TR>
 <TR >
 <TD >datapath0</TD>
-<TD >31</TD>
+<TD >32</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
-<TD >17</TD>
+<TD >18</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -289,14 +305,14 @@
 </TR>
 <TR >
 <TD >controlador0</TD>
-<TD >11</TD>
-<TD >3</TD>
+<TD >12</TD>
+<TD >2</TD>
 <TD >0</TD>
-<TD >3</TD>
-<TD >22</TD>
-<TD >3</TD>
-<TD >3</TD>
-<TD >3</TD>
+<TD >2</TD>
+<TD >23</TD>
+<TD >2</TD>
+<TD >2</TD>
+<TD >2</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
